codeanywhere_workspace/routes/temp/f85033063c510773dc7f/errors
/usercode/file.java:1: error: class HelloWorld is public, should be declared in a file named HelloWorld.java
public class HelloWorld {
       ^
1 error
